--- a/agroxaadmin-10/Agroxa_v1.0/Admin/vertical/index.html
+++ b/agroxaadmin-10/Agroxa_v1.0/Admin/vertical/index.html
@@ -151,7 +151,7 @@
                             <li class="menu-title">Main</li>
                             <li>
                                 <a href="index.html" class="waves-effect">
-                                    <i class="mdi mdi-home"></i><span class="badge badge-primary float-right">3</span> <span> Dashboard </span>
+                                    <i class="mdi mdi-home"></i><span class="badge badge-primary float-right">3</span> <span>  </span>
                                 </a>
                             </li>
 
